--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </header>
     <main>
-      <section class="first-sec dark-bk section">
+      <section class="first-sec section">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="main-btn" type="button">Order Service</button>
@@ -174,7 +174,7 @@
         </div>
       </section>
     </main>
-    <footer class="dark-bk footer">
+    <footer class="footer">
       <div class="container">
       <a class="logo logo-footer link" href="./index.html"
         >Web<span class="logo-part-btm">Studio</span></a
