--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
           <h2 hidden class="section-title">About us</h2>
           <ul class="list card-list ">
             <li class="card-list-item">
+               <div class="aboutus-card">
+                 <svg class="aboutus-icons" width="64px" height="64px">
+                  <use href="./images/icons/icons.svg#icon-antenna"></use>
+                 </svg>
+               </div>
               <h3 class="section-subtitle subtitle-about-us">Strategy</h3>
               <p class="section-text text-about-us">
                 Our goal is to identify the business problem to walk away with
@@ -67,6 +72,11 @@
               </p>
             </li>
             <li class="card-list-item">
+              <div class="aboutus-card">
+                <svg class="aboutus-icons" width="64px" height="64px">
+                  <use href="./images/icons/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="section-subtitle subtitle-about-us">Punctuality</h3>
               <p class="section-text text-about-us">
                 Bring the key message to the brand's audience for the best price
@@ -74,6 +84,11 @@
               </p>
             </li>
             <li class="card-list-item">
+              <div class="aboutus-card">
+                <svg class="aboutus-icons" width="64px" height="64px">
+                  <use href="./images/icons/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="section-subtitle subtitle-about-us">Diligence</h3>
               <p class="section-text text-about-us">
                 Research and confirm brands that present the strongest digital
@@ -81,6 +96,11 @@
               </p>
             </li>
             <li class="card-list-item">
+              <div class="aboutus-card">
+                <svg class="aboutus-icons" width="64px" height="64px">
+                  <use href="./images/icons/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="section-subtitle subtitle-about-us">Technologies</h3>
               <p class="section-text text-about-us">
                 Design practice focused on digital experiences. We bring forth a
@@ -121,8 +141,8 @@
       <section class="sectio-third section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
-          <ul class="list list card-set">
-            <li class="card-set-item">
+          <ul class="list card-set">
+            <li class="card-set-item work-card">
               <img
                 class="image-of-hero"
                 width="264"
@@ -132,9 +152,23 @@
               <div class="work-position">
               <h3 class="section-subtitle name-of-hero">Mark Guerrero</h3>
               <p class="section-text hero-job">Product Designer</p>
+              <ul class="social-list list">
+                  <li><a class="social-link" href="" target="_blank" aria-label="Instagram-icon" ><svg class="social-icons" width="16px" height="16px">
+                      <use href="./images/icons/icons.svg#icon-instagram"></use>
+                    </svg></a></li>
+                  <li><a class="social-link" href="" target="_blank" aria-label="Twitter-icon" ><svg class="social-icons" width="16px" height="16px">
+                      <use href="./images/icons/icons.svg#icon-twitter"></use>
+                    </svg></a></li>
+                  <li><a class="social-link" href="" target="_blank" aria-label="Facebook-icon" ><svg class="social-icons" width="16px" height="16px">
+                      <use href="./images/icons/icons.svg#icon-facebook"></use>
+                    </svg></a></li>
+                  <li><a class="social-link" href="" target="_blank" aria-label="Linkedin-icon" ><svg class="social-icons" width="16px" height="16px">
+                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                    </svg></a></li>
+              </ul>
               </div>
             </li>
-            <li class="card-set-item">
+            <li class="card-set-item work-card">
               <img
                 class="image-of-hero"
                 width="264"
@@ -144,9 +178,27 @@
               <div class="work-position">
               <h3 class="section-subtitle name-of-hero">Tom Ford</h3>
               <p class="section-text hero-job">Frontend Developer</p>
+                <ul class="social-list list">
+                  <li><a class="social-link" href="" target="_blank" aria-label="Instagram-icon"><svg class="social-icons" width="16px"
+                        height="16px">
+                        <use href="./images/icons/icons.svg#icon-instagram"></use>
+                      </svg></a></li>
+                  <li><a class="social-link" href="" target="_blank" aria-label="Twitter-icon"><svg class="social-icons" width="16px"
+                        height="16px">
+                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                      </svg></a></li>
+                  <li><a class="social-link" href="" target="_blank" aria-label="Facebook-icon"><svg class="social-icons" width="16px"
+                        height="16px">
+                        <use href="./images/icons/icons.svg#icon-facebook"></use>
+                      </svg></a></li>
+                  <li><a class="social-link" href="" target="_blank" aria-label="Linkedin-icon"><svg class="social-icons" width="16px"
+                        height="16px">
+                        <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                      </svg></a></li>
+                </ul>
               </div>
             </li>
-            <li class="card-set-item">
+            <li class="card-set-item work-card">
               <img
                 class="image-of-hero"
                 width="264"
@@ -156,9 +208,27 @@
               <div class="work-position">
               <h3 class="section-subtitle name-of-hero">Camila Garcia</h3>
               <p class="section-text hero-job">Marketing</p>
+                <ul class="social-list list">
+                  <li><a class="social-link" href="" target="_blank" aria-label="Instagram-icon"><svg class="social-icons" width="16px"
+                        height="16px">
+                        <use href="./images/icons/icons.svg#icon-instagram"></use>
+                      </svg></a></li>
+                  <li><a class="social-link" href="" target="_blank" aria-label="Twitter-icon"><svg class="social-icons" width="16px"
+                        height="16px">
+                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                      </svg></a></li>
+                  <li><a class="social-link" href="" target="_blank" aria-label="Facebook-icon"><svg class="social-icons" width="16px"
+                        height="16px">
+                        <use href="./images/icons/icons.svg#icon-facebook"></use>
+                      </svg></a></li>
+                  <li><a class="social-link" href="" target="_blank" aria-label="Linkedin-icon"><svg class="social-icons" width="16px"
+                        height="16px">
+                        <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                      </svg></a></li>
+                </ul>
               </div>
             </li>
-            <li class="card-set-item">
+            <li class="card-set-item work-card">
               <img
                 class="image-of-hero"
                 width="264"
@@ -168,21 +238,101 @@
               <div class="work-position">
               <h3 class="section-subtitle name-of-hero">Daniel Wilson</h3>
               <p class="section-text hero-job">UI Designer</p>
+                <ul class="social-list list">
+                  <li><a class="social-link" href="" target="_blank" aria-label="Instagram-icon"><svg class="social-icons" width="16px"
+                        height="16px">
+                        <use href="./images/icons/icons.svg#icon-instagram"></use>
+                      </svg></a></li>
+                  <li><a class="social-link" href="" target="_blank" aria-label="Twitter-icon"><svg class="social-icons" width="16px"
+                        height="16px">
+                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                      </svg></a></li>
+                  <li><a class="social-link" href="" target="_blank" aria-label="Facebook-icon"><svg class="social-icons" width="16px"
+                        height="16px">
+                        <use href="./images/icons/icons.svg#icon-facebook"></use>
+                      </svg></a></li>
+                  <li><a class="social-link" href="" target="_blank" aria-label="Linkedin-icon"><svg class="social-icons" width="16px"
+                        height="16px">
+                        <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                      </svg></a></li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">Customers</h2>
+          <div>
+            <ul class="list partner-list">
+              <li class="partner-item">
+                <div><svg class="partner-logo" width="104px" height="56px">
+                  <use href="./images/icons/icons.svg#icon-logo-first"></use>
+                </svg></div>
+              </li>
+              <li class="partner-item">
+                <div><svg class="partner-logo" width="104px" height="56px">
+                  <use href="./images/icons/icons.svg#icon-logo-second"></use>
+                </svg></div>
+              </li>
+              <li class="partner-item">
+                <div><svg class="partner-logo" width="104px" height="56px">
+                  <use href="./images/icons/icons.svg#icon-logo-third"></use>
+                </svg></div>
+              </li>
+              <li class="partner-item">
+                <div><svg class="partner-logo" width="104px" height="56px">
+                  <use href="./images/icons/icons.svg#icon-logo-fourth"></use>
+                </svg></div>
+              </li>
+              <li class="partner-item">
+                <div><svg class="partner-logo" width="104px" height="56px">
+                  <use href="./images/icons/icons.svg#icon-logo-fiveth"></use>
+                </svg></div>
+              </li>
+              <li class="partner-item">
+                <div><svg class="partner-logo" width="104px" height="56px">
+                  <use href="./images/icons/icons.svg#icon-logo-sixth"></use>
+                </svg></div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
-      <div class="container">
-      <a class="logo logo-footer link" href="./index.html"
+      <div class="container footer-section">
+        <div>
+      <a class="logo link" href="./index.html"
         >Web<span class="logo-part-btm">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+      </div>
+      <div class="footer-social">
+        <p class="social-text">Social media</p>
+          <ul class="social-list-footer list">
+            <li><a class="social-link-footer" href="" target="_blank" aria-label="Instagram-icon"><svg class="social-icons-footer" width="16px"
+                  height="16px">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg></a></li>
+            <li><a class="social-link-footer" href="" target="_blank" aria-label="Twitter-icon"><svg class="social-icons-footer" width="16px"
+                  height="16px">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg></a></li>
+            <li><a class="social-link-footer" href="" target="_blank" aria-label="Facebook-icon"><svg class="social-icons-footer" width="16px"
+                  height="16px">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg></a></li>
+            <li><a class="social-link-footer" href="" target="_blank" aria-label="Linkedin-icon"><svg class="social-icons-footer" width="16px"
+                  height="16px">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg></a></li>
+          </ul>
+      </div>
       </div>
     </footer>
   </body>
