--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <ul class="list card-list ">
             <li class="card-list-item">
                <div class="aboutus-card">
-                 <svg class="aboutus-icons" width="64px" height="64px">
+                 <svg class="aboutus-icons" width="64" height="64">
                   <use href="./images/icons/icons.svg#icon-antenna"></use>
                  </svg>
                </div>
@@ -73,7 +73,7 @@
             </li>
             <li class="card-list-item">
               <div class="aboutus-card">
-                <svg class="aboutus-icons" width="64px" height="64px">
+                <svg class="aboutus-icons" width="64" height="64">
                   <use href="./images/icons/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -85,7 +85,7 @@
             </li>
             <li class="card-list-item">
               <div class="aboutus-card">
-                <svg class="aboutus-icons" width="64px" height="64px">
+                <svg class="aboutus-icons" width="64" height="64">
                   <use href="./images/icons/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -97,7 +97,7 @@
             </li>
             <li class="card-list-item">
               <div class="aboutus-card">
-                <svg class="aboutus-icons" width="64px" height="64px">
+                <svg class="aboutus-icons" width="64" height="64">
                   <use href="./images/icons/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -153,16 +153,16 @@
               <h3 class="section-subtitle name-of-hero">Mark Guerrero</h3>
               <p class="section-text hero-job">Product Designer</p>
               <ul class="social-list list">
-                  <li><a class="social-link" href="" target="_blank" aria-label="Instagram-icon" ><svg class="social-icons" width="16px" height="16px">
+                  <li class="social-list-item"><a class="social-link" href="" target="_blank" aria-label="Instagram-icon" ><svg class="social-icons" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-instagram"></use>
                     </svg></a></li>
-                  <li><a class="social-link" href="" target="_blank" aria-label="Twitter-icon" ><svg class="social-icons" width="16px" height="16px">
+                  <li class="social-list-item"><a class="social-link" href="" target="_blank" aria-label="Twitter-icon" ><svg class="social-icons" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-twitter"></use>
                     </svg></a></li>
-                  <li><a class="social-link" href="" target="_blank" aria-label="Facebook-icon" ><svg class="social-icons" width="16px" height="16px">
+                  <li class="social-list-item"><a class="social-link" href="" target="_blank" aria-label="Facebook-icon" ><svg class="social-icons" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-facebook"></use>
                     </svg></a></li>
-                  <li><a class="social-link" href="" target="_blank" aria-label="Linkedin-icon" ><svg class="social-icons" width="16px" height="16px">
+                  <li class="social-list-item"><a class="social-link" href="" target="_blank" aria-label="Linkedin-icon" ><svg class="social-icons" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-linkedin"></use>
                     </svg></a></li>
               </ul>
@@ -263,8 +263,7 @@
       </section>
       <section class="section">
         <div class="container">
-          <h2 class="section-title">Customers</h2>
-          <div>
+          <h2 class="section-title custumers-title">Customers</h2>
             <ul class="list partner-list">
               <li class="partner-item">
                 <div><svg class="partner-logo" width="104px" height="56px">
@@ -297,13 +296,12 @@
                 </svg></div>
               </li>
             </ul>
-          </div>
         </div>
       </section>
     </main>
     <footer class="footer">
       <div class="container footer-section">
-        <div>
+        <div class="left-footer">
       <a class="logo link" href="./index.html"
         >Web<span class="logo-part-btm">Studio</span></a
       >
@@ -315,20 +313,20 @@
       <div class="footer-social">
         <p class="social-text">Social media</p>
           <ul class="social-list-footer list">
-            <li><a class="social-link-footer" href="" target="_blank" aria-label="Instagram-icon"><svg class="social-icons-footer" width="16px"
-                  height="16px">
+            <li><a class="social-link-footer" href="" target="_blank" aria-label="Instagram-icon"><svg class="social-icons-footer" width="24"
+                  height="24">
                   <use href="./images/icons/icons.svg#icon-instagram"></use>
                 </svg></a></li>
-            <li><a class="social-link-footer" href="" target="_blank" aria-label="Twitter-icon"><svg class="social-icons-footer" width="16px"
-                  height="16px">
+            <li><a class="social-link-footer" href="" target="_blank" aria-label="Twitter-icon"><svg class="social-icons-footer" width="24"
+                  height="24">
                   <use href="./images/icons/icons.svg#icon-twitter"></use>
                 </svg></a></li>
-            <li><a class="social-link-footer" href="" target="_blank" aria-label="Facebook-icon"><svg class="social-icons-footer" width="16px"
-                  height="16px">
+            <li><a class="social-link-footer" href="" target="_blank" aria-label="Facebook-icon"><svg class="social-icons-footer" width="24"
+                  height="24">
                   <use href="./images/icons/icons.svg#icon-facebook"></use>
                 </svg></a></li>
-            <li><a class="social-link-footer" href="" target="_blank" aria-label="Linkedin-icon"><svg class="social-icons-footer" width="16px"
-                  height="16px">
+            <li><a class="social-link-footer" href="" target="_blank" aria-label="Linkedin-icon"><svg class="social-icons-footer" width="24"
+                  height="24">
                   <use href="./images/icons/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
           </ul>
