--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
           </ul>
           <ul class="list card-list-portfolio">
             <li class="card-portfolio">
-              <a class="link" href=""
+              <a class="link links-portfolio" href=""
                 ><img
                   width="360"
                   src="./images/banking-app.jpg"
@@ -71,7 +71,7 @@
               >
             </li>
             <li class="card-portfolio">
-              <a class="link" href=""
+              <a class="link links-portfolio" href=""
                 ><img
                   width="360"
                   src="./images/cashless-payment.jpg"
@@ -86,7 +86,7 @@
               </a>
             </li>
             <li class="card-portfolio">
-              <a class="link" href=""
+              <a class="link links-portfolio" href=""
                 ><img
                   width="360"
                   src="./images/meditation-app.jpg"
@@ -101,7 +101,7 @@
               </a>
             </li>
             <li class="card-portfolio">
-              <a class="link" href=""
+              <a class="link links-portfolio" href=""
                 ><img
                   width="360"
                   src="./images/taxi-service.jpg"
@@ -116,7 +116,7 @@
               >
             </li>
             <li class="card-portfolio">
-              <a class="link" href=""
+              <a class="link links-portfolio" href=""
                 ><img
                   width="360"
                   src="./images/screen-illustrations.jpg"
@@ -131,7 +131,7 @@
               >
             </li>
             <li class="card-portfolio">
-              <a class="link" href=""
+              <a class="link links-portfolio" href=""
                 ><img
                   width="360"
                   src="./images/online-courses.jpg"
@@ -146,7 +146,7 @@
               >
             </li>
             <li class="card-portfolio">
-              <a class="link" href=""
+              <a class="link links-portfolio" href=""
                 ><img
                   width="360"
                   src="./images/instagram-stories-concept.jpg"
@@ -161,7 +161,7 @@
               >
             </li>
             <li class="card-portfolio">
-              <a class="link" href=""
+              <a class="link links-portfolio" href=""
                 ><img
                   width="360"
                   src="./images/organic-food.jpg"
@@ -176,7 +176,7 @@
               >
             </li>
             <li class="card-portfolio">
-              <a class="link" href=""
+              <a class="link links-portfolio" href=""
                 ><img
                   width="360"
                   src="./images/fresh-coffee.jpg"
