--- a/index.html
+++ b/index.html
@@ -266,34 +266,34 @@
           <h2 class="section-title custumers-title">Customers</h2>
             <ul class="list partner-list">
               <li class="partner-item">
-                <div><svg class="partner-logo" width="104px" height="56px">
+                <a class="partner-link" href=""><svg class="partner-logo" width="104" height="56">
                   <use href="./images/icons/icons.svg#icon-logo-first"></use>
-                </svg></div>
+                </svg></a>
               </li>
               <li class="partner-item">
-                <div><svg class="partner-logo" width="104px" height="56px">
+                <a class="partner-link" href=""><svg class="partner-logo" width="104" height="56">
                   <use href="./images/icons/icons.svg#icon-logo-second"></use>
-                </svg></div>
+                </svg></a>
               </li>
               <li class="partner-item">
-                <div><svg class="partner-logo" width="104px" height="56px">
+                <a class="partner-link" href=""><svg class="partner-logo" width="104" height="56">
                   <use href="./images/icons/icons.svg#icon-logo-third"></use>
-                </svg></div>
+                </svg></a>
               </li>
               <li class="partner-item">
-                <div><svg class="partner-logo" width="104px" height="56px">
+                <a class="partner-link" href=""><svg class="partner-logo" width="104" height="56">
                   <use href="./images/icons/icons.svg#icon-logo-fourth"></use>
-                </svg></div>
+                </svg></a>
               </li>
               <li class="partner-item">
-                <div><svg class="partner-logo" width="104px" height="56px">
+                <a class="partner-link" href=""><svg class="partner-logo" width="104" height="56">
                   <use href="./images/icons/icons.svg#icon-logo-fiveth"></use>
-                </svg></div>
+                </svg></a>
               </li>
               <li class="partner-item">
-                <div><svg class="partner-logo" width="104px" height="56px">
+                <a class="partner-link" href=""><svg class="partner-logo" width="104" height="56">
                   <use href="./images/icons/icons.svg#icon-logo-sixth"></use>
-                </svg></div>
+                </svg></a>
               </li>
             </ul>
         </div>
@@ -313,19 +313,19 @@
       <div class="footer-social">
         <p class="social-text">Social media</p>
           <ul class="social-list-footer list">
-            <li><a class="social-link-footer" href="" target="_blank" aria-label="Instagram-icon"><svg class="social-icons-footer" width="24"
+            <li class="link-footer"><a class="social-link-footer" href="" target="_blank" aria-label="Instagram-icon"><svg class="social-icons-footer" width="24"
                   height="24">
                   <use href="./images/icons/icons.svg#icon-instagram"></use>
                 </svg></a></li>
-            <li><a class="social-link-footer" href="" target="_blank" aria-label="Twitter-icon"><svg class="social-icons-footer" width="24"
+            <li class="link-footer"><a class="social-link-footer" href="" target="_blank" aria-label="Twitter-icon"><svg class="social-icons-footer" width="24"
                   height="24">
                   <use href="./images/icons/icons.svg#icon-twitter"></use>
                 </svg></a></li>
-            <li><a class="social-link-footer" href="" target="_blank" aria-label="Facebook-icon"><svg class="social-icons-footer" width="24"
+            <li class="link-footer"><a class="social-link-footer" href="" target="_blank" aria-label="Facebook-icon"><svg class="social-icons-footer" width="24"
                   height="24">
                   <use href="./images/icons/icons.svg#icon-facebook"></use>
                 </svg></a></li>
-            <li><a class="social-link-footer" href="" target="_blank" aria-label="Linkedin-icon"><svg class="social-icons-footer" width="24"
+            <li class="link-footer"><a class="social-link-footer" href="" target="_blank" aria-label="Linkedin-icon"><svg class="social-icons-footer" width="24"
                   height="24">
                   <use href="./images/icons/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
