--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li class="card-list-item">
                <div class="aboutus-card">
                  <svg class="aboutus-icons" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                  </svg>
                </div>
               <h3 class="section-subtitle subtitle-about-us">Strategy</h3>
@@ -74,7 +74,7 @@
             <li class="card-list-item">
               <div class="aboutus-card">
                 <svg class="aboutus-icons" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="section-subtitle subtitle-about-us">Punctuality</h3>
@@ -86,7 +86,7 @@
             <li class="card-list-item">
               <div class="aboutus-card">
                 <svg class="aboutus-icons" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="section-subtitle subtitle-about-us">Diligence</h3>
@@ -98,7 +98,7 @@
             <li class="card-list-item">
               <div class="aboutus-card">
                 <svg class="aboutus-icons" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="section-subtitle subtitle-about-us">Technologies</h3>
@@ -154,16 +154,16 @@
               <p class="section-text hero-job">Product Designer</p>
               <ul class="social-list list">
                   <li class="social-list-item"><a class="social-link" href="" target="_blank" aria-label="Instagram-icon" ><svg class="social-icons" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg></a></li>
                   <li class="social-list-item"><a class="social-link" href="" target="_blank" aria-label="Twitter-icon" ><svg class="social-icons" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg></a></li>
                   <li class="social-list-item"><a class="social-link" href="" target="_blank" aria-label="Facebook-icon" ><svg class="social-icons" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg></a></li>
                   <li class="social-list-item"><a class="social-link" href="" target="_blank" aria-label="Linkedin-icon" ><svg class="social-icons" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg></a></li>
               </ul>
               </div>
@@ -181,19 +181,19 @@
                 <ul class="social-list list">
                   <li><a class="social-link" href="" target="_blank" aria-label="Instagram-icon"><svg class="social-icons" width="16px"
                         height="16px">
-                        <use href="./images/icons/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg></a></li>
                   <li><a class="social-link" href="" target="_blank" aria-label="Twitter-icon"><svg class="social-icons" width="16px"
                         height="16px">
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg></a></li>
                   <li><a class="social-link" href="" target="_blank" aria-label="Facebook-icon"><svg class="social-icons" width="16px"
                         height="16px">
-                        <use href="./images/icons/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg></a></li>
                   <li><a class="social-link" href="" target="_blank" aria-label="Linkedin-icon"><svg class="social-icons" width="16px"
                         height="16px">
-                        <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg></a></li>
                 </ul>
               </div>
@@ -211,19 +211,19 @@
                 <ul class="social-list list">
                   <li><a class="social-link" href="" target="_blank" aria-label="Instagram-icon"><svg class="social-icons" width="16px"
                         height="16px">
-                        <use href="./images/icons/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg></a></li>
                   <li><a class="social-link" href="" target="_blank" aria-label="Twitter-icon"><svg class="social-icons" width="16px"
                         height="16px">
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg></a></li>
                   <li><a class="social-link" href="" target="_blank" aria-label="Facebook-icon"><svg class="social-icons" width="16px"
                         height="16px">
-                        <use href="./images/icons/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg></a></li>
                   <li><a class="social-link" href="" target="_blank" aria-label="Linkedin-icon"><svg class="social-icons" width="16px"
                         height="16px">
-                        <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg></a></li>
                 </ul>
               </div>
@@ -241,19 +241,19 @@
                 <ul class="social-list list">
                   <li><a class="social-link" href="" target="_blank" aria-label="Instagram-icon"><svg class="social-icons" width="16px"
                         height="16px">
-                        <use href="./images/icons/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg></a></li>
                   <li><a class="social-link" href="" target="_blank" aria-label="Twitter-icon"><svg class="social-icons" width="16px"
                         height="16px">
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg></a></li>
                   <li><a class="social-link" href="" target="_blank" aria-label="Facebook-icon"><svg class="social-icons" width="16px"
                         height="16px">
-                        <use href="./images/icons/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg></a></li>
                   <li><a class="social-link" href="" target="_blank" aria-label="Linkedin-icon"><svg class="social-icons" width="16px"
                         height="16px">
-                        <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg></a></li>
                 </ul>
               </div>
@@ -267,32 +267,32 @@
             <ul class="list partner-list">
               <li class="partner-item">
                 <a class="partner-link" href=""><svg class="partner-logo" width="104" height="56">
-                  <use href="./images/icons/icons.svg#icon-logo-first"></use>
+                  <use href="./images/icons.svg#icon-logo-first"></use>
                 </svg></a>
               </li>
               <li class="partner-item">
                 <a class="partner-link" href=""><svg class="partner-logo" width="104" height="56">
-                  <use href="./images/icons/icons.svg#icon-logo-second"></use>
+                  <use href="./images/icons.svg#icon-logo-second"></use>
                 </svg></a>
               </li>
               <li class="partner-item">
                 <a class="partner-link" href=""><svg class="partner-logo" width="104" height="56">
-                  <use href="./images/icons/icons.svg#icon-logo-third"></use>
+                  <use href="./images/icons.svg#icon-logo-third"></use>
                 </svg></a>
               </li>
               <li class="partner-item">
                 <a class="partner-link" href=""><svg class="partner-logo" width="104" height="56">
-                  <use href="./images/icons/icons.svg#icon-logo-fourth"></use>
+                  <use href="./images/icons.svg#icon-logo-fourth"></use>
                 </svg></a>
               </li>
               <li class="partner-item">
                 <a class="partner-link" href=""><svg class="partner-logo" width="104" height="56">
-                  <use href="./images/icons/icons.svg#icon-logo-fiveth"></use>
+                  <use href="./images/icons.svg#icon-logo-fiveth"></use>
                 </svg></a>
               </li>
               <li class="partner-item">
                 <a class="partner-link" href=""><svg class="partner-logo" width="104" height="56">
-                  <use href="./images/icons/icons.svg#icon-logo-sixth"></use>
+                  <use href="./images/icons.svg#icon-logo-sixth"></use>
                 </svg></a>
               </li>
             </ul>
@@ -315,19 +315,19 @@
           <ul class="social-list-footer list">
             <li class="link-footer"><a class="social-link-footer" href="" target="_blank" aria-label="Instagram-icon"><svg class="social-icons-footer" width="24"
                   height="24">
-                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg></a></li>
             <li class="link-footer"><a class="social-link-footer" href="" target="_blank" aria-label="Twitter-icon"><svg class="social-icons-footer" width="24"
                   height="24">
-                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a></li>
             <li class="link-footer"><a class="social-link-footer" href="" target="_blank" aria-label="Facebook-icon"><svg class="social-icons-footer" width="24"
                   height="24">
-                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a></li>
             <li class="link-footer"><a class="social-link-footer" href="" target="_blank" aria-label="Linkedin-icon"><svg class="social-icons-footer" width="24"
                   height="24">
-                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
           </ul>
       </div>
