--- a/portfolio.html
+++ b/portfolio.html
@@ -194,39 +194,37 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="container footer-section">
-        <div>
-      <a class="logo link" href="./index.html"
-        >Web<span class="logo-part-btm">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+  <footer class="footer">
+    <div class="container footer-section">
+      <div class="left-footer">
+        <a class="logo link" href="./index.html">Web<span class="logo-part-btm">Studio</span></a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
       </div>
       <div class="footer-social">
         <p class="social-text">Social media</p>
-          <ul class="social-list-footer list">
-            <li><a class="social-link-footer" href="" target="_blank" aria-label="Instagram-icon"><svg class="social-icons-footer" width="16px"
-                  height="16px">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg></a></li>
-            <li><a class="social-link-footer" href="" target="_blank" aria-label="Twitter-icon"><svg class="social-icons-footer" width="16px"
-                  height="16px">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg></a></li>
-            <li><a class="social-link-footer" href="" target="_blank" aria-label="Facebook-icon"><svg class="social-icons-footer" width="16px"
-                  height="16px">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg></a></li>
-            <li><a class="social-link-footer" href="" target="_blank" aria-label="Linkedin-icon"><svg class="social-icons-footer" width="16px"
-                  height="16px">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg></a></li>
-          </ul>
+        <ul class="social-list-footer list">
+          <li class="link-footer"><a class="social-link-footer" href="" target="_blank" aria-label="Instagram-icon"><svg
+                class="social-icons-footer" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg></a></li>
+          <li class="link-footer"><a class="social-link-footer" href="" target="_blank" aria-label="Twitter-icon"><svg
+                class="social-icons-footer" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg></a></li>
+          <li class="link-footer"><a class="social-link-footer" href="" target="_blank" aria-label="Facebook-icon"><svg
+                class="social-icons-footer" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg></a></li>
+          <li class="link-footer"><a class="social-link-footer" href="" target="_blank" aria-label="Linkedin-icon"><svg
+                class="social-icons-footer" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg></a></li>
+        </ul>
       </div>
-      </div>
-    </footer>
+    </div>
+  </footer>
   </body>
 </html>
