--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <button class="main-btn" type="button">Order Service</button>
         </div>
       </section>
-      <section class="section">
+      <section class="section work">
         <div class="container">
           <h2 hidden class="section-title">About us</h2>
           <ul class="list card-list ">
